# gym-gazebo

examples/scripts_erlecopter/: erlecopter_hover_qlearn.py
examples/scripts_turtlebot/: circuit2_turtlebot_lidar_qlearn.py
gazebo_pedestrian/: CMakeLists.txt  factory.cc  factory.hh  factory.world  factory_plugin.cc  factory_plugin.hh  heisen.world  heisen_camera_plugin.cc  heisen_person_plugin.cc  take_photo_plugin.cc  take_photo_plugin.hh
gazebo_pedestrian/models/heisen_camera/: model.config  model.sdf
gazebo_pedestrian/models/heisen_person/: model.config  model.sdf
gym_gazebo/envs/assets/launch/: GazeboCircuitTurtlebotLidar_v0.launch  GazeboErleCopterHover-v0.launch
